--- a/booking.html
+++ b/booking.html
@@ -50,13 +50,82 @@
                 </div>
             </div>
 
-            <div class="favorite_space" style="width:1345px;height:100px">
+            <div class="favorite_space" style="width:1345px;height:200px">
                 <div class="container">
                     <div class="title" style="margin-left:-80px">
-                        <h3><b>Không gian ưa thích</b></h3>
+                        <h3><b>Không gian ưa thích!!!</b></h3>
+                    </div>
+                    <div class="list_favorite_space" style="width:1300px;margin-left: -80px;">
+                        <div class="space_suggestion" style="width:255px">
+                             <div style="width: 100%;">
+                                <div class="space" style="width:240px;height: 340px;">
+                                    <div class="img_space">
+                                        <div><img src="https://cdn.luxstay.com/home/suggestion/location_6_1572858402.png" style="width: 235px;height: 145px;"></div>
+                                    </div>
+                                </div>
+                             </div>
+                             <div style="width: 100%;">
+                                <div class="space" style="width:240px;height: 340px;">
+                                    <div class="img_space">
+                                        <div><img src="https://cdn.luxstay.com/home/suggestion/location_2_1572858309.png" style="width: 235px;height: 145px;"></div>
+                                    </div>
+                                </div>
+                             </div>
+                             <div style="width: 100%;">
+                                <div class="space" style="width:240px;height: 340px;">
+                                    <div class="img_space">
+                                        <div><img src="https://cdn.luxstay.com/home/suggestion/location_3_1572858351.png" style="width: 235px;height: 145px;"></div>
+                                    </div>
+                                </div>
+                             </div>
+                             <div style="width: 100%;">
+                                <div class="space" style="width:240px;height: 340px;">
+                                    <div class="img_space">
+                                        <div><img src="https://cdn.luxstay.com/home/suggestion/location_1_1572857463.png" style="width: 235px;height: 145px;"></div>
+                                    </div>
+                                </div>
+                             </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="favorite_space_content" style="width:1345px;height:200px">
+                <div class="container">
+                    <div class="list_favorite_space_content" style="width:1300px;margin-left: -80px;">
+                        <div class="list_space_content" style="width:255px">
+                            <div style="width:100%">
+                                <div class="space_content" style="width:240px;">
+                                    <a class="edit_space_content" href="#" style="text-decoration: none;"><b>Căn hộ</b></a>
+                                    <p>Fully furnished apartment</p>
+                                </div>
+                            </div>
+
+                        <div style="width:100%">
+                            <div class="space_content" style="width:240px;">
+                                <a class="edit_space_content" href="#" style="text-decoration: none;"><b>Biệt Thự</b></a>
+                                <p>Biệt Thự</p>
+                            </div>
+                        </div>
+
+                        <div style="width:100%">
+                            <div class="space_content" style="width:240px;">
+                                <a class="edit_space_content" href="#" style="text-decoration: none;"><b>Nhà riêng</b></a>
+                                <p>House to yourself</p>
+                            </div>
+                        </div>
+
+                        <div style="width:100%">
+                            <div class="space_content" style="width:240px;">
+                                <a class="edit_space_content" href="#" style="text-decoration: none;"><b>Studio</b></a>
+                                <p>Các căn hộ loại nhỏ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
             <div class="hotspace" style="width:1345px;height:500px">
                     <div class="container">
@@ -67,23 +136,43 @@
                         <div class="row4">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 4cot">
                                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                                        <div id="hp11" >
-                                            <div></div>
+                                        <div id="hp1" class="hp">
+                                            <div class="hp__content">
+                                                <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Hà Nội</a></div>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 1000 khách sạn</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Hà Nội</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Hà Nội</a></p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                        <div class="hp1">
-                                            <div><img src="img/Cầu-Tình-Yêu-Đà-Nẵng.jpg" style="width:180px;height:180px"></div>
+                                        <div id="hp2" class="hp">
+                                            <div class="hp__content">
+                                                <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Đà Nẵng</a></div>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 600 khách sạn</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Đà Nẵng</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Đà Nẵng</a></p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                        <div class="hp1">
-                                            <div><img src="img/du_lich_hoi_an_viet_travel_media_15_48_51_375-16_20_20_191.jpg" style="width:180px;height: 180px;"></div>
+                                        <div id="hp3" class="hp">
+                                            <div class="hp__content">
+                                                <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Hội An</a></div>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 500 khách sạn</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Hội An</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Hội An</a></p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                                        <div class="hp1">
-                                            <div><img src="img/nguyen-dang-son-4.jpg" style="width:360px;height: 180px;"></div>
+                                        <div id="hp4" class="hp">
+                                            <div class="hp__content">
+                                                <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Hồ Chí Minh</a></div>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 1500 khách sạn</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Hồ Chí Minh</a></p>
+                                                <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Hồ Chí Minh</a></p>
+                                            </div>
                                         </div>
                                     </div>
                             </div>
@@ -93,18 +182,33 @@
                                 <div class="row4">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 4cot">
                                             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                                                <div class="hp1">
-                                                    <div><img src="img/phu-quoc-hung-viet-travel.jpg" style="width:360px;height: 180px;"></div>
+                                                <div id="hp5" class="hp">
+                                                    <div class="hp__content">
+                                                        <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Phú Quốc</a></div>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 350 khách sạn</a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Phú </a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Phú Quốc</a></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                                                <div class="hp1">
-                                                    <div><img src="img/Viet_Dung-184602034655-nha-trang.jpg" style="width:365px;height:180px"></div>
+                                                <div id="hp6" class="hp">
+                                                    <div class="hp__content">
+                                                        <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Nha Trang</a></div>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 500 khách sạn</a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Nha Trang</a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;"</a>• Khuyến mãi du lịch Nha Trang</a></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                                                <div class="hp1">
-                                                    <div><img src="img/khu-nghi-duong-terracotta-da-lat-1-800x450.jpg" style="width:360px;height: 180px;"></div>
+                                                <div id="hp7" class="hp">
+                                                    <div class="hp__content">
+                                                        <div class="hp_text"><a href="#" style="color: white;text-decoration: none;">Đà Lạt</a></div>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Hơn 500 khách sạn</a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Cẩm nang du lịch Đà Lạt</a></p>
+                                                        <p class="hp__intro"><a href="#" style="color: white;text-decoration: none;">• Khuyến mãi du lịch Đà Lạt</a></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                     </div>
