--- a/cak.html
+++ b/cak.html
@@ -5,35 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BookingOnline.com</title>
-    <link rel="stylesheet" href="css/1.css">
+    <link rel="stylesheet" href="css/cak.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <body>
-    <div class="wrapper2">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <h2><b>Ưu đãi đọc quyền</b></h2>
-                    <p>Đọc quyền tại BookingOnline , đặt phòng ngay !!!</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <header>
+        
+    </header>
+    <main>
 
-    <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <a><img class="edit_img" src="https://cdn.luxstay.com/home/event/event_1_1571832331.jpg" style="height:180px;width: 400px;"></a>
-            <a><img class="edit_img" src="https://cdn.luxstay.com/home/event/event_1_1571832331.jpg" style="height:180px;width: 400px;"></a>
-            <a><img class="edit_img" src="https://cdn.luxstay.com/home/event/event_1_1571832331.jpg" style="height:180px;width: 400px;"></a>
-          </div>
-        </div>
-    </div>
+    </main>
+    <footer>
 
-  </div>
-  
+    </footer>
+
+    <script src="cak.js"></script>
 </body>
 </html>
