toihd-commit-order-page

--- a/booking4.html
+++ b/booking4.html
@@ -73,7 +73,7 @@
                         <div></div>
                         <div class="account__body">
                                 <button type="submit" class="account__btn btn btn-grad--primary btn--shadow btn--md btn--radius btn--full bold" style="background-image: linear-gradient(90deg,#f65e38 0,#f68a39 51%,#f65e38);background-size: 200% auto;padding-left: 30px;padding-right: 30px;width: 302px;height: 54px;font-size: larger;margin-left: 10‒;color: white;margin-top: 0px;margin-left: 5px;">Đăng kí</button>
-                            <div class="center-xs">Bạn đã có tài khoản BookingOnline?<a class="text-orange bold" style="cursor: pointer;" href="file:///C:/Users/Dell/Desktop/test/booking3.html">Đăng nhập</a></div> 
+                            <div class="center-xs">Bạn đã có tài khoản BookingOnline?<a class="text-orange bold" style="cursor: pointer;" href="./booking3.html">Đăng nhập</a></div> 
                             <div class="caption center-xs">Tôi đồng ý với
                                 <a href="#" target="_blank" rel="noopener" class="bold">Bảo mật</a> và
                                 <a href="#" rel="noopener" target="_blank" class="bold">Điều khoản hoạt động</a> của BookingOnline.
