--- a/booking2.html
+++ b/booking2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BookingOnline.com</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./html/img/logo1.jpg" />
     <link rel="stylesheet" href="css/2.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900&display=swap" rel="stylesheet">
