--- a/booking3.html
+++ b/booking3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BookingOnline.com</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./html/img/logo1.jpg" />
     <link rel="stylesheet" href="css/3.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
