--- a/html/order/order2.html
+++ b/html/order/order2.html
@@ -426,7 +426,9 @@
                             placeholder="Thêm thông tin"></textarea>
                         </div>
                         <div class="label-input">
+                          <a href="./order3.html">
                           <button id="customer-send-btn" class="button">Tiếp theo</button>
+                        </a>
                         </div>
                       </div>
                     </div>
