--- a/html/order/order3.html
+++ b/html/order/order3.html
@@ -180,7 +180,9 @@
                         <div class="label-input" style="flex-direction: row; justify-content: space-between;">
                           <button id="customer-send-btn" class="button-back"
                             onclick="location.href='./order2.html';">Quay lại</button>
-                          <button id="customer-send-btn" class="button">Tiếp theo</button>
+                            <a href="./order4.html">
+                          <button id="customer-send-btn" onclick="location.href='./order4.html';" class="button">Tiếp theo</button>
+                        </a>
                         </div>
                       </div>
                     </div>
