--- a/html/order/order2.html
+++ b/html/order/order2.html
@@ -450,10 +450,10 @@
                   <div class="row">
                     <a href="#" class="is-flex order-sm-2 col-md-12 col-sm-12 order-lg-2">
                       <div class="room-title">
-                        <h4>Vung Tau Beach Villa 4 phòng ngủ - Biệt thự biển Hà Gia 330m2 (có phòng 5 nếu cần )</h4>
+                        <h4>Villa Anne Fleur - Luxury stay Pool & BB</h4>
                         <div class="room-location">
                           <div class="location-image"></div>
-                          <span style="width: calc(100% - 25px);">Vũng Tàu, Bà Rịa Vũng Tàu, Vietnam</span>
+                          <span style="width: calc(100% - 25px);">Lương Sơn, Hòa Bình, Việt Nam</span>
                         </div>
                       </div>
                     </a>
