--- a/html/order/order4.html
+++ b/html/order/order4.html
@@ -38,16 +38,17 @@
             <div class="navbar-menu" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Trang Chủ</a>
+                  <a class="nav-link" href="../../booking.html">Trang Chủ</a>
+                </li>
+
+                <li class="navbar-item">
+                  <a class="nav-link" href="../../booking3.html">Đăng Nhập</a>
                 </li>
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Đăng Nhập</a>
+                  <a class="nav-link" href="../../booking4.html">Đăng Kí</a>
                 </li>
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Đăng Kí</a>
-                </li>
-                <li class="navbar-item">
-                  <a class="nav-link" href="#">Ngôn Ngữ</a>
+                  <a class="nav-link" href="#">Ngôn ngữ</a>
                 </li>
               </ul>
             </div>
