--- a/html/order/order2.html
+++ b/html/order/order2.html
@@ -38,14 +38,14 @@
             <div class="navbar-menu" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Trang Chủ</a>
+                  <a class="nav-link" href="../../booking.html">Trang Chủ</a>
                 </li>
 
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Đăng Nhập</a>
+                  <a class="nav-link" href="../../booking3.html">Đăng Nhập</a>
                 </li>
                 <li class="navbar-item">
-                  <a class="nav-link" href="#">Đăng Kí</a>
+                  <a class="nav-link" href="../../booking4.html">Đăng Kí</a>
                 </li>
                 <li class="navbar-item">
                   <a class="nav-link" href="#">Ngôn ngữ</a>
@@ -448,7 +448,7 @@
               <div class="right-body">
                 <div class="checkup-header">
                   <div class="row">
-                    <a href="#" class="is-flex order-sm-2 col-md-12 col-sm-12 order-lg-2">
+                    <a href="../../booking2.html" class="is-flex order-sm-2 col-md-12 col-sm-12 order-lg-2">
                       <div class="room-title">
                         <h4>Villa Anne Fleur - Luxury stay Pool & BB</h4>
                         <div class="room-location">
