--- a/booking.html
+++ b/booking.html
@@ -52,10 +52,11 @@
                     <div class="d-inline-block d-lg-none  ml-md-0 mr-auto py-3"><a href="#"></a></div>
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li class="active">
-                        <a href="#">Trang chủ</a>
+                        <a href="./booking.html">Trang chủ</a>
                       </li>
-                      <li><a href="#">Đăng Ký</a></li>
-                      <li><a href="#">Đăng Nhập</a></li>
+                      <li><a href="./booking3.html">Đăng Nhập</a></li>
+                      <li><a href="./booking4.html">Đăng Ký</a></li>
+                      
                       <li><a href="#">Ngôn Ngữ</a></li>
                     </ul>
                   </div>
